feat: add secret key definitions